change the desktop-logo to right to avoid overlap with menu items

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -679,7 +679,7 @@ label {
   display: flex;
   align-items: center;
   position: absolute;
-  left: 1px;
+  right: 20px;
 }
 .menu-item {
   height: 100%;
